build-logic/routebinding/routebinding-compiler-plugin/src/test/data/diagnostic/PublicFunction.kt
import androidx.compose.runtime.Composable
import io.github.reactivecircus.routebinding.runtime.RouteBinding
import kotlin.test.assertEquals

@RouteBinding(DummyRoute::class)
@Composable
<!FUNCTION_CAN_BE_INTERNAL!>public<!> fun DummyScreen() {
}
